+ Fix build after latest additions. Changed:
Shaman / Bloodlust, Heroism - Sated & Exhaustion debuffs
Warlock / Everlasting Affliction rank 1 - 5 -- removed as handled already
Paladin / Seals of the Pure
Mage / Glyph of Fireball
DK / Frost Fever and Blood Plague

--- a/win/VC90/game.vcproj
+++ b/win/VC90/game.vcproj
@@ -863,11 +863,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\game\MailHandler.cpp"
+				RelativePath="..\..\src\game\Mail.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\game\Mail.h"
+				RelativePath="..\..\src\game\MailHandler.cpp"
 				>
 			</File>
 			<File
@@ -1016,6 +1016,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\game\SpellAuras.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\game\SpellClassMask.h"
 				>
 			</File>
 			<File
