+ Change VC90 project to fit latest Warden update

--- a/win/VC90/game.vcproj
+++ b/win/VC90/game.vcproj
@@ -1067,10 +1067,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\game\WardenHandler.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\..\src\game\WaypointManager.cpp"
 				>
 			</File>
@@ -1896,6 +1892,50 @@
 			</File>
 			<File
 				RelativePath="..\..\src\game\playerbot\PlayerbotWarriorAI.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Warden"
+			>
+			<File
+				RelativePath="..\..\src\game\WardenBase.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\game\WardenBase.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\game\WardenDataStorage.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\game\WardenDataStorage.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\game\WardenMac.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\game\WardenMac.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\game\WardenModuleMac.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\game\WardenModuleWin.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\game\WardenWin.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\game\WardenWin.h"
 				>
 			</File>
 		</Filter>
