[IOV61] Better implementation of possessed summons.
    New subclass of creature (similar to TemporarySummons) that is fully controlled
    (movement, camera...) by the player on summon. We mostly improve the
    bound-to-aura character of possesed summons.

    I must admit, that the handling in the SpellAuraHolder is not a very
    pretty one, but at least it work's at it should!

--- a/win/VC100/game.vcxproj
+++ b/win/VC100/game.vcxproj
@@ -490,6 +490,7 @@
     <ClCompile Include="..\..\src\game\PlayerDump.cpp" />
     <ClCompile Include="..\..\src\game\PointMovementGenerator.cpp" />
     <ClCompile Include="..\..\src\game\PoolManager.cpp" />
+	<ClCompile Include="..\..\src\game\PossessedSummon.cpp" />
     <ClCompile Include="..\..\src\game\QueryHandler.cpp" />
     <ClCompile Include="..\..\src\game\QuestDef.cpp" />
     <ClCompile Include="..\..\src\game\QuestHandler.cpp" />
@@ -662,6 +663,7 @@
     <ClInclude Include="..\..\src\game\PlayerDump.h" />
     <ClInclude Include="..\..\src\game\PointMovementGenerator.h" />
     <ClInclude Include="..\..\src\game\PoolManager.h" />
+	<ClInclude Include="..\..\src\game\PossessedSummon.h" />
     <ClInclude Include="..\..\src\game\QuestDef.h" />
     <ClInclude Include="..\..\src\game\RandomMovementGenerator.h" />
     <ClInclude Include="..\..\src\game\ReactorAI.h" />
