--- a/win/VC100/game.vcxproj.filters
+++ b/win/VC100/game.vcxproj.filters
@@ -213,6 +213,9 @@
     <ClCompile Include="..\..\src\game\PoolManager.cpp">
       <Filter>World/Handlers</Filter>
     </ClCompile>
+	<ClCompile Include="..\..\src\game\PossessedSummon.cpp">
+      <Filter>World/Handlers</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\src\game\QueryHandler.cpp">
       <Filter>World/Handlers</Filter>
     </ClCompile>
@@ -694,6 +697,9 @@
       <Filter>World/Handlers</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\game\PoolManager.h">
+      <Filter>World/Handlers</Filter>
+    </ClInclude>
+	<ClInclude Include="..\..\src\game\PossessedSummon.h">
       <Filter>World/Handlers</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\game\QuestDef.h">
